--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,4 @@
-GITLAB_TOKEN=<replace-with_your_token> # example: glpat-oqkweowqeoqwekowqkewqoweqkwkkjaskdjask
-GITLAB_TOKEN_USER=<replace-with_your_token> # example: glpat-oqkweowqeoqwekowqkewqoweqkwkkjaskdjask
-GEMINI_API_KEY=<replace-with_your_token> # example: laksdoaksdokqweoqwkoqekqwpelqwpelqwe
+GITLAB_TOKEN=glpat-WeHUUEP6dqtgl5C_vPUWV286MQp1Oml4YWJjCw.01.120yvv9fc
+GITLAB_TOKEN_USER=glpat-HPbN7CfQiDo8FFlnsnklgG86MQp1Oml4OXdjCw.01.120dlxezm
+GITLAB_TOKEN_TESTING=glpat-WeHUUEP6dqtgl5C_vPUWV286MQp1Oml4YWJjCw.01.120yvv9fc
+GEMINI_API_KEY=AIzaSyC2Eq_P_Ovz8AJRRuqj-nEPcwrnQXYiSPk
