--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,4 @@
-GITLAB_TOKEN=glpat-WeHUUEP6dqtgl5C_vPUWV286MQp1Oml4YWJjCw.01.120yvv9fc
-GITLAB_TOKEN_USER=glpat-HPbN7CfQiDo8FFlnsnklgG86MQp1Oml4OXdjCw.01.120dlxezm
-GITLAB_TOKEN_TESTING=glpat-WeHUUEP6dqtgl5C_vPUWV286MQp1Oml4YWJjCw.01.120yvv9fc
-GEMINI_API_KEY=AIzaSyC2Eq_P_Ovz8AJRRuqj-nEPcwrnQXYiSPk
+GITLAB_TOKEN=AAAAA
+GITLAB_TOKEN_USER=AAAAA
+GITLAB_TOKEN_TESTING=AAAAA
+GEMINI_API_KEY=AAAAA
